--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
     "browser-image-compression": "^2.0.2",
+    "date-fns": "^4.1.0",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
